обновил таблицу, реализовал работу кнопок "New Portfolio" , "Delete"

--- a/src/main/resources/maket/newName.fxml
+++ b/src/main/resources/maket/newName.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.controller.CreateController">
+<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.makery.address.controller.NewPortfolio">
     <children>
         <GridPane layoutX="31.0" layoutY="25.0" prefHeight="122.0" prefWidth="412.0">
             <columnConstraints>
