--- a/src/main/resources/maket/PortfolioOverview.fxml
+++ b/src/main/resources/maket/PortfolioOverview.fxml
@@ -23,13 +23,14 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <Label layoutX="14.0" layoutY="6.0" text="Portfolio Details" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-                  <GridPane gridLinesVisible="true" layoutX="41.0" layoutY="115.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0">
+                  <GridPane fx:id="portfolioTable" gridLinesVisible="true" layoutX="41.0" layoutY="115.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="72.0" minWidth="10.0" prefWidth="51.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="75.0" minWidth="10.0" prefWidth="54.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="74.0" minWidth="10.0" prefWidth="58.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="10.0" prefWidth="79.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="93.0" minWidth="10.0" prefWidth="76.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="91.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -42,34 +43,6 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label fx:id="assetName1" text="Asset_1" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="assetName2" text="Asset_2" GridPane.rowIndex="2">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="assetName3" text="Asset_3" GridPane.rowIndex="3">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="assetName4" text="Asset_4" GridPane.rowIndex="4">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="assetName5" text="Asset_5" GridPane.rowIndex="5">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="assetName6" text="Asset_6" GridPane.rowIndex="6">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
-                        <Label fx:id="assetName7" text="Asset_7" GridPane.rowIndex="7">
-                           <GridPane.margin>
-                              <Insets left="3.0" />
-                           </GridPane.margin></Label>
                         <TextField fx:id="assetVal1" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
@@ -101,7 +74,7 @@
                            <GridPane.margin>
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin></TextField>
-                        <Label text="Asset Name">
+                        <Label text="Asset">
                            <GridPane.margin>
                               <Insets left="3.0" />
                            </GridPane.margin></Label>
@@ -112,19 +85,19 @@
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets></Label>
-                        <Label text="Balancing" GridPane.columnIndex="2">
+                        <Label text="Proportion, %" GridPane.columnIndex="3">
                            <GridPane.margin>
                               <Insets left="3.0" />
                            </GridPane.margin></Label>
-                        <Label text="Buy" GridPane.columnIndex="3">
+                        <Label text="Buy / Sell" GridPane.columnIndex="5">
                            <GridPane.margin>
                               <Insets left="3.0" />
                            </GridPane.margin></Label>
-                        <Label text="Sell out" GridPane.columnIndex="4">
+                        <Label text="Balancing, %" GridPane.columnIndex="4">
                            <GridPane.margin>
                               <Insets left="3.0" />
                            </GridPane.margin></Label>
-                        <TextField fx:id="assetBalance1" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                        <TextField fx:id="assetBalance1" GridPane.columnIndex="3" GridPane.rowIndex="1">
                            <opaqueInsets>
                               <Insets left="3.0" />
                            </opaqueInsets>
@@ -132,7 +105,7 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField fx:id="assetBalance2" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                        <TextField fx:id="assetBalance2" GridPane.columnIndex="3" GridPane.rowIndex="2">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
                            </opaqueInsets>
@@ -140,7 +113,7 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField fx:id="assetBalance3" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                        <TextField fx:id="assetBalance3" GridPane.columnIndex="3" GridPane.rowIndex="3">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
                            </opaqueInsets>
@@ -148,7 +121,7 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField fx:id="assetBalance4" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                        <TextField fx:id="assetBalance4" GridPane.columnIndex="3" GridPane.rowIndex="4">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
                            </opaqueInsets>
@@ -156,7 +129,7 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField fx:id="assetBalance5" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                        <TextField fx:id="assetBalance5" GridPane.columnIndex="3" GridPane.rowIndex="5">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
                            </opaqueInsets>
@@ -164,7 +137,7 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField fx:id="assetBalance6" GridPane.columnIndex="2" GridPane.rowIndex="6">
+                        <TextField fx:id="assetBalance6" GridPane.columnIndex="3" GridPane.rowIndex="6">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
                            </opaqueInsets>
@@ -172,7 +145,7 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField fx:id="assetBalance7" GridPane.columnIndex="2" GridPane.rowIndex="7">
+                        <TextField fx:id="assetBalance7" GridPane.columnIndex="3" GridPane.rowIndex="7">
                            <opaqueInsets>
                               <Insets left="3.0" right="3.0" />
                            </opaqueInsets>
@@ -180,76 +153,151 @@
                               <Insets left="3.0" right="3.0" />
                            </GridPane.margin>
                         </TextField>
-                        <Label fx:id="Buy1" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                        <Label fx:id="Buy1" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="1">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Buy2" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                        <Label fx:id="Buy2" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="2">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Buy3" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                        <Label fx:id="Buy3" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="3">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Buy4" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="4">
+                        <Label fx:id="Buy4" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="4">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Buy5" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                        <Label fx:id="Buy5" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="5">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Buy6" text="Label" GridPane.columnIndex="3" GridPane.rowIndex="6">
+                        <Label fx:id="Buy6" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="6">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="7">
+                        <Label fx:id="Buy7" text="Label" GridPane.columnIndex="5" GridPane.rowIndex="7">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell1" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                        <Label fx:id="balancing1" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="1">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell2" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="2">
+                        <Label fx:id="balancing2" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="2">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell3" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="3">
+                        <Label fx:id="balancing3" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="3">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell4" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="4">
+                        <Label fx:id="balancing4" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="4">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell5" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="5">
+                        <Label fx:id="balancing5" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="5">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell6" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="6">
+                        <Label fx:id="balancing6" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="6">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="Sell7" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="7">
+                        <Label fx:id="balancing7" text="Label" GridPane.columnIndex="4" GridPane.rowIndex="7">
                            <padding>
                               <Insets left="4.0" />
                            </padding>
                         </Label>
+                        <Label text="Price" GridPane.columnIndex="2">
+                           <padding>
+                              <Insets left="3.0" />
+                           </padding>
+                        </Label>
+                        <TextField fx:id="price1" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="price2" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="price3" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="price4" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="price5" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="price6" GridPane.columnIndex="2" GridPane.rowIndex="6">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="price7" GridPane.columnIndex="2" GridPane.rowIndex="7">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName2" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName3" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName4" GridPane.rowIndex="4">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName5" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName6" GridPane.rowIndex="6">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="assetName7" GridPane.rowIndex="7">
+                           <GridPane.margin>
+                              <Insets left="3.0" right="3.0" />
+                           </GridPane.margin>
+                        </TextField>
                      </children>
                   </GridPane>
                   <ButtonBar layoutX="105.0" layoutY="258.0" prefHeight="40.0" prefWidth="307.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="5.0">
